# yolo26

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: benchmark_coco_yolo26n.py  benchmark_coco_yolo26n_linux.sh  make_tiny_dataset.py  parity_check_yolo26.py  prepare_coco_yolo.py  train_coco_yolo26n_linux.sh  verify_small_dataset_training.py
tests/: test_augmentations.py  test_benchmark_helpers.py  test_coco_training_helpers.py  test_converter_optional.py  test_export_options.py  test_metrics_validation.py  test_model_loss.py  test_tiny_training.py  test_training_parity.py
yolo26_tf/: __init__.py  api.py  augment.py  cli.py  coco.py  converter.py  data.py  export.py  instances.py  losses.py  metrics.py  model.py  modules.py  ops.py  optim.py  tf_import.py  tfrecord.py  trainer.py  validation.py
